[tool.poetry]
name = "collect"
version = "0.1.0"
description = ""
authors = ["Smitona <jarofsmetana@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django-rest-framework = "^0.1.0"
celery = "^5.4.0"
pillow = "^10.3.0"
gevent = "^24.2.1"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
django-celery-results = "^2.5.1"
drf-yasg = "^1.21.7"
django-filter = "^24.2"
drf-extra-fields = "^3.7.0"
djoser = "^2.2.2"
django = "^5.0.4"
django-redis = "^5.4.0"
certifi = "^2024.2.2"

[tool.isort]
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
